# ST-Claude-tools

./: CLAUDE.md  README.md  setup.sh  update-index.sh
zcloud_mcp/: .env.example  .gitignore  .mcp.json  Dockerfile  Makefile  README.md  api_usage_tracking.py  app_profiles.py  artifacts.py  asset_groups.py  auth.py  authorization_profiles.py  azure_deployments.py  brands.py  cluster_groups_zks.py  cluster_instances.py  datastores.py  datastreams.py  datetime_utils.py  deployment_projects.py  document_policies.py  edge_app_instances.py  edge_apps.py  edge_node_clusters.py  edge_nodes.py  enterprises.py  entitlements.py  gitrepos_zks.py  global_edge_apps.py  health.py  helm_charts_zks.py  images.py  kubernetes_deployments_zks.py  logging_config.py  mcpserver.py  metrics.py  mock_utils.py  network_instances.py  networks.py  private_repository_zks.py  (+15 more)
zcloud_mcp/mocks/: README.md  app-profiles-detail.json  app-profiles-list.json  brands-detail.json  brands-list.json  datastores-detail.json  datastores-list.json  edge-app-instances-detail.json  edge-app-instances-events.json  edge-app-instances-list.json  edge-app-instances-logs.json  edge-app-instances-metrics.json  edge-app-instances-summary.json  edge-apps-detail.json  edge-apps-list.json  edge-nodes-detail.json  edge-nodes-events.json  edge-nodes-list.json  edge-nodes-metrics.json  edge-nodes-summary.json  enterprises-detail.json  enterprises-list.json  global-edge-apps-detail.json  global-edge-apps-list.json  images-baseos-latest.json  images-detail.json  images-list.json  network-instances-detail.json  networks-list.json  (+14 more)
(+79 files in other folders)
